Bugfix: prevented disclaimer from overlapping with audio and instructions buttons

--- a/src/App.css
+++ b/src/App.css
@@ -497,4 +497,8 @@ footer {
   #center-section {
     width: 20%;
   }
+
+  .disclaimer {
+    width: 70%;
+  }
 }
